@@ -1,1 +1,3 @@
+xs/GdkCairo.xs
 xs/GdkPixbufSimpleAnim.xs
+xs/PangoCairo.xs
